# Azref-backend

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: deploy-agent.yml  deploy-crm-sync-lambda.yml  deploy-users-service.yml
infra/terraform/bootstrap/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/github-oidc/: backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/network/: backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/platform/: agent.tf  backend.tf  kafka.tf  main.tf  outputs.tf  redis.tf  variables.tf  versions.tf
infra/terraform/services/agent/: backend.tf  main.tf  outputs.tf  user_data.sh.tpl  variables.tf  versions.tf
infra/terraform/services/users-service/: backend.tf  main.tf  outputs.tf  user_data.sh.tpl  variables.tf  versions.tf
libs/auth_clerk/: __init__.py  deps.py  jwks.py  pyproject.toml  schemas.py  verify.py
libs/cache_semantic/: __init__.py  client.py  decorator.py  exact.py  hashing.py  pyproject.toml  requirements-dev.txt
libs/cache_semantic/tests/: conftest.py  test_cache_exact.py
libs/crm/: __init__.py  config.py  models.py  port.py
libs/crm/adapters/: salesforce.py
libs/kafka_events/: __init__.py  config.py  producer.py  pyproject.toml  requirements-dev.txt  topics.py
libs/kafka_events/schemas/: __init__.py  agent_events.py  base.py  user_events.py
libs/kafka_events/tests/: test_config.py  test_producer.py  test_schemas.py
scripts/: test_sf_jwt.py
services/agent/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
services/agent/app/: config.py  kafka_client.py  main.py
services/agent/app/agent/: lang.py  loop.py  prompt.py  tools.py  types.py
services/agent/app/api/: routes.py
services/agent/app/db/: client.py  queries.py
services/agent/app/llm/: cascade.py  providers.py
services/agent/tests/: conftest.py  test_health.py  test_lang.py
services/auth-backend/app/: main.py
services/auth-backend/tests/: test_health.py
services/crm-sync-lambda/: Makefile  README.md  pytest.ini  requirements.txt  template.yaml
services/crm-sync-lambda/app/: events.py  handler.py  mapping.py  processing.py
services/crm-sync-lambda/tests/: test_handler.py  test_mapping.py
services/users-service/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  ruff.toml
services/users-service/alembic/: env.py
services/users-service/alembic/versions/: 31596c4368b9_users_model.py
services/users-service/app/: config.py  db.py  kafka_client.py  main.py  schemas.py
services/users-service/app/models/: __init__.py  base.py  user.py
services/users-service/app/routers/: me.py
