[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auth-clerk"
version = "0.1.0"
description = "Clerk JWT authentication helpers"
requires-python = ">=3.13"
# Unified PyJWT to 2.13.0 (was 2.10.1 in users-service before migration — patch-level bump).
dependencies = [
    "fastapi==0.136.3",
    "httpx==0.28.1",
    "pyjwt==2.13.0",
    "cryptography==48.0.0",
    "pydantic==2.13.4",
]

[tool.setuptools]
packages = ["auth_clerk"]
package-dir = { "auth_clerk" = "." }
