[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent"
version = "0.1.0"
description = "Azref AI agent service"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.48.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "httpx==0.28.1",
    "asyncpg==0.31.0",
    "python-dotenv==1.2.2",
    "auth-clerk",
    "cache-semantic",
    "kafka-events",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
]

[tool.uv.sources]
auth-clerk = { workspace = true }
cache-semantic = { workspace = true }
kafka-events = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]
